# exersise-wordle-like-puzzle

./: .env  README.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/apis/: __init__.py  api.py
app/controllers/: wordles.py
app/database/: config.py  models.py
deployments/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 51ae255390f8_add_wordles.py
